Attempt To Fix Google API Key Getting Removed Somehow
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/report/index.html
+++ b/report/index.html
@@ -8,7 +8,7 @@
         
         <!--GMaps Lat-Lon Picker Imports-->
         <script src="/resources/lat-long-picker/js/jquery-2.1.1.min.js"></script>
-        <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+        <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB-Jt7pZmSyV33xbgTEc7Z0t1YVgekpULk"></script>
         <link rel="stylesheet" type="text/css" href="/resources/lat-long-picker/css/jquery-gmaps-latlon-picker.css"/>
         <script src="/resources/lat-long-picker/js/jquery-gmaps-latlon-picker.js"></script>
         
