Attempt To Add Footer
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
         <p>
             [Brief Site Description]
         </p>
+		<footer>
+			<p>
+				This Is A Footer Test!
+			</p>
+		</footer>
     </body>
 </html>
