--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
             [Brief Site Description]
         </p>
-		<footer>
+		<footer class="footer">
 			<p>
 				This Is A Footer Test!
 			</p>
