--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         </p>
 		<footer class="footer">
 			<p>
-				This Is A Footer Test!
+				<center>
+			 		//Copy Info
+					&#9400; Carter Bailey 2017
+				
+					//Site Visits Map
+					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+				</center>
 			</p>
 		</footer>
     </body>
