Added Liscense Info, Moved Liscense File, Added Menu Icon, & First Attempt At Drop Down Menu

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
         <link rel="shortcut icon" href="/favicon.ico">
         <meta name="theme-color" content="#191919">
     </head>
-
+	
     <body>
-        <header><a href="/report.html" class="button">Report!</a><a href="/contact/index.html" class="button">Contact Us</a><a href="/view/index.php" class="button1">All Reports</a></header>
+        <header>
+			<div class="dropdown">
+			<input class="dropbtn" type="image" src="/resources/drawable/menuIcon.png"/>
+				<div class="dropdown-content">
+					<a href="/">Home</a>
+					<a href="/report">Report!</a>
+					<a href="/contact">Contact Us</a>
+					<a href="/view">All Reports</a>
+				</div>
+			</div>
+		</header>
         <h1>
             Cycle Reporter
         </h1>
