Attempt To Fix MASSIVE Menu Icon For Dropdown Menu
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
 			<div class="dropdown">
-			<input class="dropbtn" type="image" src="/resources/drawable/menuIcon.png"/>
+			<button class="dropbtn"/>
 				<div class="dropdown-content">
 					<a href="/">Home</a>
 					<a href="/report">Report!</a>
