--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
 			<div class="dropdown">
-			<button class="dropbtn"/>
+			<button class="dropbtn"/></button>
 				<div class="dropdown-content">
 					<a href="/">Home</a>
 					<a href="/report">Report!</a>
