--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<meta charset="UTF-8">
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="/resources/style/global.css"/>
