Forgot = In Height & Width For Dropdown Button Image
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
 			<div class="dropdown">
-			<button class="dropbtn"/><img src="/resources/drawable/menuIcon.png" style"width: 2%; height: 1%;"></button>
+			<button class="dropbtn"/><img src="/resources/drawable/menuIcon.png" style="width: 2%; height: 1%;"></button>
 				<div class="dropdown-content">
 					<a href="/">Home</a>
 					<a href="/report">Report!</a>
