--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
 			<div class="dropdown">
-			<button class="dropbtn"/><img src="/resources/drawable/menuIcon.png" style="width: 100%; height: 100%;"></button>
+			<button class="dropbtn"/><img src="/resources/drawable/menuIcon.png" style="width: 100%; height: 100%;"></img></button>
 				<div class="dropdown-content">
 					<a href="/">Home</a>
 					<a href="/report">Report!</a>
@@ -27,10 +27,9 @@
         </p>
 		
 		<footer class="footer">
-			<p>
 				<center>
 					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
-					&#9400; Carter Bailey 2017
+					<p>&#9400; Carter Bailey 2017</p>
 				</center>
 		</footer>
     </body>
