--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
 			<div class="dropdown">
-			<button class="dropbtn"/>Dropdown</button>
+			<button class="dropbtn" style="width: 2%; height: 1%;"/><img src="/resources/drawable/menuIcon.png" style="width: 100%; height: 100%;"></img></button>
 				<div class="dropdown-content">
 					<a href="/">Home</a>
 					<a href="/report">Report!</a>
