--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <body>
         <header>
 			<div class="dropdown">
-			<button class="dropbtn" style="width: 2%; height: 1%;"/><img src="/resources/drawable/menuIcon.png" style="width: 100%; height: 100%;"></img></button>
+			<input class="dropbtn" style="background-color: cyan; width: 3%; height: 2%;" type="image" src="/resources/drawable/menuIcon.png" />
 				<div class="dropdown-content">
-					<a href="/">Home</a>
-					<a href="/report">Report!</a>
-					<a href="/contact">Contact Us</a>
-					<a href="/view">All Reports</a>
+					<a class="dropContent" href="/">Home</a>
+					<a class="dropContent" href="/report">Report!</a>
+					<a class="dropContent" href="/contact">Contact Us</a>
+					<a class="dropContent" href="/view">All Reports</a>
 				</div>
 			</div>
 		</header>
