Attempted To Make Dropdown Vertical
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 			<div class="dropdown">
 			<input class="dropbtn" style="background-color: cyan; width: 3%; height: 2%;" type="image" src="/resources/drawable/menuIcon.png" />
 				<div class="dropdown-content">
-					<a class="dropContent" href="/">Home</a>
-					<a class="dropContent" href="/report">Report!</a>
-					<a class="dropContent" href="/contact">Contact Us</a>
-					<a class="dropContent" href="/view">All Reports</a>
+				
+					<ul class="dropUl">
+						<li class="dropLi"><a class="dropContent" href="/">Home</a></li>
+						<li class="dropLi"><a class="dropContent" href="/report">Report!</a></li>
+						<li class="dropLi"><a class="dropContent" href="/contact">Contact Us</a></li>
+						<li class="dropLi"><a class="dropContent" href="/view">All Reports</a></li>
+					</ul>
 				</div>
 			</div>
 		</header>
