Removed Inline Menu Button Style
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <body>
         <header>
 			<div class="dropdown">
-			<input class="dropbtn" style="background-color: cyan; width: 3%; height: 2%;" type="image" src="/resources/drawable/menuIcon.png" />
+			<input class="dropbtn" type="image" src="/resources/drawable/menuIcon.png" />
 				<div class="dropdown-content">
-				
 					<ul class="dropUl">
 						<li class="dropLi"><a class="dropContent" href="/">Home</a></li>
 						<li class="dropLi"><a class="dropContent" href="/report">Report!</a></li>
