--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<footer class="footer">
 				<center>
 					<p>
-						<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=000000&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+						<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=75&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
 						&#9400; Carter Bailey 2017
 					</p>
 				</center>
