--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
         </p>
 		
 		<footer class="footer">
-			<div style="width: 25%">
-				<p>
-					&#9400; Carter Bailey 2017
-				</p>
-			</div>
-			<center>
-				<div>
-					<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
-				</div>
-			</center>
+			<table style="width: 100%;">
+				<center>
+					<tr>
+						<div style="width: 25%">
+							<p>
+								&#9400; Carter Bailey 2017
+							</p>
+						</div>
+				
+						<div>
+							<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
+						</div>
+					</tr>
+				</center>
+			</table>
 		</footer>
     </body>
 </html>
