Made Attempt To Fix Footer Table
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -30,17 +30,14 @@
 		
 		<footer class="footer">
 			<table style="width: 100%;">
+				<tbody>
 					<tr>
-						<div style="width: 25%">
-							<p>
+						<p>
 								&#9400; Carter Bailey 2017
-							</p>
-						</div>
-				
-						<div>
-							<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
-						</div>
+						</p>
+						<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
 					</tr>
+				</tbody>
 			</table>
 		</footer>
     </body>
