Made Attempt To Fix Footer
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -29,20 +29,12 @@
         </p>
 		
 		<footer class="footer">
-			<p>
-				<table style="width: 100%;">
-					<tbody>
-						<tr>
-							<td>
-								&#9400; Carter Bailey 2017
-							</td>
-							<td>
-								<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-			</p>
+			<center>
+				<p>
+					&#9400; Carter Bailey 2017
+					<script type='text/javascript' style="max-height: 69px;" id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=100&t=tt&d=Bm9rtsuwwVA4KLUkpBLYAkix6kSG5HmrEv_t_SogiZc&co=0b4975&cmo=3acc3a&cmn=ff5353&ct=cdd4d9'></script>
+				</p>
+			</center>
 		</footer>
     </body>
 </html>
