--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 	
     <body>
         <header>
-			<div class="dropdown">
-			<input class="dropbtn" type="image" src="/resources/drawable/menuIcon.png" />
-				<div class="dropdown-content">
-					<ul class="dropUl">
-						<li class="dropLi"><a class="dropContent" href="/">Home</a></li>
-						<li class="dropLi"><a class="dropContent" href="/report">Report!</a></li>
-						<li class="dropLi"><a class="dropContent" href="/contact">Contact Us</a></li>
-						<li class="dropLi"><a class="dropContent" href="/view">All Reports</a></li>
-					</ul>
+			<div class="rightContainer">
+				<div class="dropdown">
+					<input class="dropbtn" type="image" src="/resources/drawable/menuIcon.png" />
+						<div class="dropdown-content">
+							<ul class="dropUl">
+								<li class="dropLi"><a class="dropContent" href="/">Home</a></li>
+								<li class="dropLi"><a class="dropContent" href="/report">Report!</a></li>
+								<li class="dropLi"><a class="dropContent" href="/contact">Contact Us</a></li>
+								<li class="dropLi"><a class="dropContent" href="/view">All Reports</a></li>
+							</ul>
+						</div>
 				</div>
 			</div>
 		</header>
