--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <header>
 			<div class="rightContainer">
 				<div class="loginCtrls">
-					<p><small>
-						<a href="/signup">Sign Up</a> | <a href="/login">Login</a>
-					</small></p>
-				</div
+					<p>
+						<small><a href="/signup">Sign Up</a> | <a href="/login">Login</a></small>
+					</p>
+				</div>
 				<div class="dropdown">
 					<input class="dropbtn" type="image" src="/resources/drawable/menuIcon.png" />
 						<div class="dropdown-content">
