Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <link rel="shortcut icon" href="/favicon.ico">
 		<meta charset="UTF-8">
         <meta name="theme-color" content="#191919">
+		<link rel="import" href="/resources/style/header.html">
+		<link rel="import" href="/resources/style/footer.html">
     </head>
 	
     <body>
-		<link rel="import" href="/resources/style/header.html" />
         <h1>
             Cycle Reporter
         </h1>
         <p>
             [Brief Site Description]
         </p>
-		<link rel="import" href="/resources/style/footer.html" />
     </body>
 </html>
