Fixed Some CSS Errors
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/report/index.html
+++ b/report/index.html
@@ -251,7 +251,7 @@
             </p><br>-->
 
             <input type="submit" name="submit" value="Submit Incident Report">
-			<footer class="footer">
+			<footer class="footer" style="position: relative;">
 				<center>
 					<p>
 						<small>&#9400; Carter Bailey 2017</small>
