Added Experimental File Upload
Signed-off-by: Gangemstyle850 <carterman123456@outlook.com>

--- a/report/index.html
+++ b/report/index.html
@@ -202,34 +202,34 @@
 
 
             <p>File Attachments (Video Files):<br>
-                <input type="file" accept="video/*" name="vidUp" id="vidUp">
+                <input type="file" value="Upload Video" accept="video/*" name="vidUp" id="vidUp">
             </p><br>
 
             
 
             <p>
-                Perp(s') Name:<br>
+                Perp's Name:<br>
                 <input type="text" name="perpName"><br>
             </p>
 
 
 
             <p>
-                Perp(s') Mail:<br>
+                Perp's EMail:<br>
                 <input type="text" name="perpMail"><br>
             </p>
 
 
 
             <p>
-                Contact Name:<br>
+                Your Name:<br>
                 <input type="text" name="usrName" required="true"><br>
             </p>
             
 
 
             <p>
-                Email:<br>
+                Your Email:<br>
                 <input type="email" name="usrMail" required="true"> --- For Contact Purposes Only, We Promise Not To Give Out Your Info, And We Will Never Send You Spam.
             </p><br>
 
