--- a/PlanC/index.htm
+++ b/PlanC/index.htm
@@ -133,9 +133,7 @@ function CompareVersions(v1, v2)
 <!-- Begin Prerequisites -->
 <TABLE ID="BootstrapperSection" BORDER="0"><TR><TD COLSPAN="2">The following prerequisites are required:</TD></TR><TR><TD WIDTH="10">&nbsp;</TD><TD><UL>
 <LI>.NET Framework 3.5 SP1</LI>
-</UL></TD></TR><TR><TD COLSPAN="2">
-If these components are already installed, you can <SPAN CLASS="JustThisApp"><A HREF="ChatClient.application">launch</A></SPAN> the application now. Otherwise, click the button below to install the prerequisites and run the application.
-</TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR></TABLE>
+</UL></TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR></TABLE>
 <!-- End Prerequisites -->
 
 
